[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tt"
version = "4.6.4"
description = "Connect CEX & DEX across multi messaging platforms with plugin support."
authors = ["mraniki <8766259+mraniki@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
keywords = ["finance", "trading", "economics",
    "DEFI","CEFI","DEX", "CEX",
    "0x", "Uniswap",
    "bot", "chat",
    "talky",
    ]
packages = [
    {include = "tt"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat"
]

[tool.poetry.urls]
"Changelog" =  "https://github.com/mraniki/tt/blob/dev/CHANGELOG.rst"
"Support" =  "https://github.com/mraniki/tt/discussions"
"Issues" =  "https://github.com/mraniki/tt/issues"


[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.12"
loguru = "^0.7.0"
asyncz = "^0.5.0"
apprise= "^1.4.0"
httpx = "^0.24.1"
uvicorn = "^0.23.0"
fastapi = "^0.100.0"
ping3 = "^4.0.4"
ccxt = "^4.0.0"
dxsp = "^4.2.3"
findmyorder = "^1.6.1"
iamlistening = "^3.1.0"
talkytrend = "^1.12.3"

 
[tool.poetry.group.dev.dependencies]
# python-semantic-release = "^8.0.3"
python-semantic-release = "^7.34.6"
ruff = "^0.0.281"

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
exclude = [
  ".github/*",
  "docs/*",
]
# ignore = ["E401","F401"]
format = "github"
fixable = ["ALL"]

[tool.black]
target-version = ['py39', 'py310', 'py311']
line-length = 88
# exclude = "((.eggs | .git | .pytype | .pytest_cache | build | dist))"


[tool.pylint.exceptions]
overgeneral-exceptions = [
    "builtins.BaseException",
    "builtins.Exception",
    "builtins.RuntimeError",
]

[tool.poetry.group.test.dependencies]
pytest = "^7.0"
pytest-cov = "^4.1"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.1"
pytest-loguru = "^0.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=5,<6"
sphinx_bootstrap_theme = "^0.8.1"
sphinxext-remoteliteralinclude = "^0.4.0"


[tool.pytest.ini_options]
pythonpath = ". tt"
testpaths = "tests"
python_classes = "Test*"
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
addopts = "-v"
log_level = "DEBUG"
filterwarnings = [
    " ignore:.*U.*mode is deprecated:DeprecationWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "examples/*",
    "docs/*",
    "*/config.py"
]


[tool.semantic_release]
version_variable = ["pyproject.toml:version","tt/utils.py:__version__"]
branch = "main"
upload_to_pypi = false
upload_to_release = false
build_command = false
remove_dist = false
commit_parser = "semantic_release.history.emoji_parser"
use_textual_changelog_sections = true
changelog_sections = "breaking, feature, fix, documentation"
major_emoji = "BREAKING,ðŸ’¥,:boom:"
minor_emoji = "feat,ðŸ¥š,:egg:,ðŸš€,:rocket:,ðŸ’„,:lipstick:,âœ¨,:sparkles:"
patch_emoji = "fix,bump,Update,ðŸŽ¨,:art:,ðŸ›,:bug:,ðŸš‘,:ambulance:,âš¡,:zap:,ðŸ”¥,:fire:,ðŸš¨,:rotating_light:,â™»ï¸,:recycle:,ðŸ”§,:wrench:,â¬†ï¸,:arrow_up:,ðŸ©¹,:adhesive_bandage:,ðŸ‘·,:construction_worker:,ðŸ“,:memo:,ðŸ”’,:lock:,ðŸ‘½,:alien:,ðŸ’¬,:speech_balloon:,ðŸ¥…,:goal_net:,âœ…,:white_check_mark:,ðŸ³,:whale:,ðŸ™ˆ,:see_no_evil:,âš—ï¸,:alembic:,ðŸ§,:monocle_face:,ðŸ”‡,:mute:,ðŸ”Š:volume:"

# [tool.semantic_release]
# upload_to_vcs_release = false
# version_variables = ["pyproject.toml:version","tt/utils.py:__version__"]
# build_command = "pip install poetry && poetry build"
# commit_parser = "emoji"


# [tool.semantic_release.commit_parser_options]
# major_tags = [
#     "BREAKING",
#     "ðŸ’¥",
#     ":boom:",
#   ]
# minor_tags = ["feat",
#     "ðŸ¥š",":egg:",
#     "ðŸ’„",":lipstick:",
#     "ðŸš€",":rocket:",
#     "âœ¨",":sparkles:",
# ]

# patch_tags = ["fix","bump","Update",
#     "ðŸŽ¨",":art:",
#     "ðŸ›",":bug:",
#     "ðŸš‘",":ambulance:",
#     "âš¡",":zap:",
#     "ðŸ”¥",":fire:",
#     "ðŸš¨",":rotating_light:",
#     "â™»ï¸",":recycle:",
#     "ðŸ”§",":wrench:",
#     "â¬†ï¸",":arrow_up:",
#     "ðŸ©¹",":adhesive_bandage:",
#     "ðŸ‘·",":construction_worker:",
#     "ðŸ“",":memo:",
#     "ðŸ”’",":lock:",
#     "ðŸ‘½",":alien:",
#     "ðŸ’¬",":speech_balloon:",
#     "ðŸ¥…",":goal_net:",
#     "âœ…",":white_check_mark:",
#     "ðŸ³",":whale:",
#     "ðŸ™ˆ",":see_no_evil:",
#     "âš—ï¸",":alembic:",
#     "ðŸ§",":monocle_face:",
#     "ðŸ”‡",":mute:",
#     "ðŸ”Š",":volume:",
# ]
